Ignore swap files

--- a/argparse/Makefile
+++ b/argparse/Makefile
@@ -1,1 +1,12 @@
-# Defa
+# Defaults
+CFLAGS ?= -O3 -g -ggdb
+LDFLAGS ?=
+
+BASIC_CFLAGS = -Wall -fPIC
+BASIC_LDFLAGS = -lm
+
+# We use ALL_* variants
+ALL_CFLAGS = $(BASIC_CFLAGS) $(CFLAGS)
+ALL_LDFLAGS = $(BASIC_LDFLAGS) $(LDFLAGS)
+
+LIBNAME=libargparse
