Updated the tests

--- a/argparse/Makefile
+++ b/argparse/Makefile
@@ -10,3 +10,10 @@ ALL_CFLAGS = $(BASIC_CFLAGS) $(CFLAGS)
 ALL_LDFLAGS = $(BASIC_LDFLAGS) $(LDFLAGS)
 
 LIBNAME=libargparse
+
+DYLIBSUFFIX=so
+STLIBSUFFIX=a
+DYLIBNAME=$(LIBNAME).$(DYLIBSUFFIX)
+DYLIB_MAKE_CMD=$(CC) -shared -o $(DYLIBNAME) $(ALL_LDFLAGS)
+STLIBNAME=$(LIBNAME).$(STLIBSUFFIX)
+STLIB_MAKE_CMD=ar rcs $(STLIBNA
