--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,12 @@
 #
 # Process this file with autoconf to produce a configure script.
 #
+# Run ./configure with your options to generate config.mak.autogen file which
+# is used by Makefile.
+#
+
+## Definitions of private macros.
+
+# CONF_SUBST_INIT
+# -------------------
+# Prepare shell va
