--- a/configure.ac
+++ b/configure.ac
@@ -9,4 +9,10 @@
 
 # CONF_SUBST_INIT
 # -------------------
-# Prepare shell va
+# Prepare shell variables and autoconf machine required by later calls
+# to CONF_SUBST.
+AC_DEFUN([CONF_SUBST_INIT],
+    [config_appended_defs=; newline='
+'
+    AC_CONFIG_COMMANDS([$config_file],
+                       [ech
