--- a/configure.ac
+++ b/configure.ac
@@ -76,4 +76,9 @@ AC_ARG_WITH(sodium,
 if test "$withval" != no; then
     AC_CHECK_LIB(sodium,sodium_init,
         [LIBS="-lsodium $LIBS"],
-   
+        [AC_MSG_ERROR([sodium is required - see https://github.com/jedisct1/libsodium])]
+    )   
+fi
+
+AC_CHECK_FUNCS(crypto_box_curve25519xchacha20poly1305_open_easy,
+    [CFLAGS="$CFLAGS -DHAVE_CRYPTO_BOX_CU
