--- a/debian/control
+++ b/debian/control
@@ -10,4 +10,6 @@ Package: dnscrypt-wrapper
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
 Description: custom secured DNS query wrapper
- DNSCrypt is
+ DNSCrypt is a protocol that authenticates communications between a DNS client 
+ and a DNS resolver. It prevents DNS spoofing. It uses cryptographic signatures 
+ to verify that responses originate from the chosen 
