--- a/debian/dnscrypt-wrapper.service
+++ b/debian/dnscrypt-wrapper.service
@@ -1,4 +1,11 @@
 [Unit]
 Description=DNSCrypt wrapper
 Documentation=man:dnscrypt-wrapper(8)
-After=network.target
+After=network.target iptables.service firewalld.service
+
+[Service]
+Type=forking
+EnvironmentFile=-/etc/default/dnscrypt-wrapper
+ExecStart=/usr/sbin/dnscrypt-wrapper $RUNTIME_OPTS $NETWORK_OPTS $KEY_OPTS
+KillMode=process
+Rest
