Fix missing import.

--- a/debian/rules
+++ b/debian/rules
@@ -24,4 +24,11 @@ export DEB_LDFLAGS_MAINT_APPEND= -Wl,--as-needed
 CONFFLAGS_COMMON  = --host=$(DEB_HOST_GNU_TYPE) \
                     --build=$(DEB_BUILD_GNU_TYPE) \
                     --sysconfdir=/etc/dnscrypt-wrapper \
-                    --p
+                    --prefix=/usr \
+                    --infodir=\$${prefix}/share/info \
+                    --mandir=\$${prefix}/share/man \
+                    --with-event \
+                    --with-sodium
+
+%:
+	dh $@ --
