--- a/debian/rules
+++ b/debian/rules
@@ -31,4 +31,5 @@ CONFFLAGS_COMMON  = --host=$(DEB_HOST_GNU_TYPE) \
                     --with-sodium
 
 %:
-	dh $@ --
+	dh $@ --parallel --max-parallel=4 --with autoreconf
+
